fix z-index issue

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   justify-content: flex-start;
   align-items: center;
   background: white;
-  z-index: 10;
+  z-index: 11;
 }
 .actions {
   display: flex;
