--- a/src/EditModal.css
+++ b/src/EditModal.css
@@ -1,5 +1,5 @@
 .EditModal {
-  z-index: 1;
+  z-index: 10;
 }
 .editShiftForm {
   display: grid;
